resources/deploy/app.yml
---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: $APP_NAME
  labels:
    app: $APP_NAME
spec:
  replicas: 3
  selector:
    matchLabels:
      app: $APP_NAME
  template:
    metadata:
      labels:
        app: $APP_NAME
    spec:
      imagePullSecrets:
        - name: gcr-registry
      containers:
        - name: app
          image: $IMAGE_NAME:$IMAGE_TAG
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: $APP_PORT
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 800m
              memory: 350Mi

---

kind: Service
apiVersion: v1
metadata:
  name: $APP_NAME
spec:
  selector:
    app: $APP_NAME
  ports:
    - name: http
      port: $APP_PORT
