resources/deploy/ingress.yml
---

kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: $APP_NAME
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: certs-$APP_NAME
      hosts:
        - "$PROJECT_HOST.$PROJECT_CODE.dd-dev.digital"
  rules:
    - host: $PROJECT_HOST.$PROJECT_CODE.dd-dev.digital
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: $APP_NAME
                port:
                  name: http
